[package]
name = "saturn"
version = "0.1.0"
authors = ["d_ttang <d_ttang@163.com>"]
edition = "2018"
default-run = "saturn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-protobuf = "0.6.0"
actix-web = "3.3.2"
bytes = "1.0.0"
env_logger = "0.8.2"
# prost = "0.7.0"
# prost-derive = "0.7.0"

prost = "0.6.1"
prost-derive = "0.6.1"

[dev-dependencies]
actix-rt = "1.1.1"
